<resources>
    <string name="app_name">SehatCentral</string>

    <!-- Strings related to login -->
    <string name="prompt_user_name">User Name</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome to Sehat Central</string>
    <string name="nav_header_subtitle">www.cottonsoil.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vitals">VITALS</string>
    <string name="systolic_diastolic">SYS/DIA</string>
    <string name="oxygen_saturation">O2 SATURATION</string>
    <string name="pulse">PULSE</string>
    <string name="temperature">TEMP</string>
    <string name="height">HEIGHT</string>
    <string name="weight">WEIGHT</string>
    <string name="prescription">PRESCRIPTION</string>
    <string name="drugs">DRUGS</string>
</resources>